--- a/index.html
+++ b/index.html
@@ -15,22 +15,16 @@
 <body>
     <div class="row">
         <div class="large-12 columns">
-            <h1><a href="/">Technical Notes</a></h1>
-
-
-<ul>
-<li>
-    <a href="html-snippets/index.html">HTML Snippets</a>
-    <a href="django/index.html">Django</a>
-</li>
-</ul>
-
-        <hr />
-        <footer>
-            <p>Last generated: Tue Jun 18 18:18:21 2013.</p>
-        </footer>
-
-         </div>
+            <h1><a href="sitenotes/">Technical Notes</a></h1>
+            <ul>
+                <li><a href="html-snippets/index.html">HTML Snippets</a></li>
+                <li><a href="django/index.html">Django</a></li>
+            </ul>
+            <hr />
+            <footer>
+                <p>Last generated: Tue Jun 18 18:18:21 2013.</p>
+            </footer>
+        </div>
     </div>
 </body>
 
