--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="row">
         <div class="large-12 columns">
-            <h1><a href="sitenotes/">Technical Notes</a></h1>
+            <h1><a href="http://tomleo.github.io/sitenotes/">Technical Notes</a></h1>
             <ul>
                 <li><a href="html-snippets/index.html">HTML Snippets</a></li>
                 <li><a href="django/index.html">Django</a></li>
