--- a/index.html
+++ b/index.html
@@ -9,17 +9,28 @@
     <link rel="stylesheet" href="/css/normalize.css" />
     <link rel="stylesheet" href="/css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="/css/pygments.css" />
+    
 </head>
 
 <body>
     <div class="row">
         <div class="large-12 columns">
-            <h1><a href="http://tomleo.github.io/sitenotes/">Technical Notes</a></h1>
-            <ul>
-                <li><a href="html-snippets/index.html">HTML Snippets</a></li>
-                <li><a href="django/index.html">Django</a></li>
-            </ul>
-        </div>
+            <h1><a href="/">Technical Notes</a></h1>
+
+
+<ul>
+<li>
+    <a href="html-snippets/index.html">HTML Snippets</a>
+    <a href="django/index.html">Django</a>
+</li>
+</ul>
+
+        <hr />
+        <footer>
+            <p>Last generated: Sun Jun 23 10:43:46 2013.</p>
+        </footer>
+
+         </div>
     </div>
 </body>
 
