--- a/index.html
+++ b/index.html
@@ -17,18 +17,10 @@
         <div class="large-12 columns">
             <h1><a href="/">Technical Notes</a></h1>
 
-
-<ul>
-<li>
-    <a href="html-snippets/index.html">HTML Snippets</a>
-    <a href="django/index.html">Django</a>
-</li>
-</ul>
-
-        <hr />
-        <footer>
-            <p>Last generated: Sun Jun 23 10:43:46 2013.</p>
-        </footer>
+            <ul>
+            <li><a href="html-snippets/index.html">HTML Snippets</a></li>
+            <li><a href="django/index.html">Django</a></li>
+            </ul>
 
          </div>
     </div>
